fix welcome section bug (invisible title )

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main {
     align-items: center;
     font-size: x-large;
     background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
-    color: white;
+    padding-top: 100px;
 }
 
 #title {
